# commodity-sentiment-monitor

./: .env.example  .gitignore  DEMO_VIDEO_SCRIPT.md  Dockerfile  KNOWN_LIMITATIONS.md  PLAN.md  README.md  SOAK_TEST.md  TECHNICAL_DOC.md  docker-compose.yml  eval_report.md  pyproject.toml
docs/: eval_setup.md
fixtures/: eval_cases.json
src/app/: config.py  main.py  models.py  sentinel.py
src/app/backtest/: yfinance_check.py
src/app/cost/: tracker.py
src/app/dashboard/: rich_ui.py
src/app/diarization/: pause_based.py
src/app/eval/: run.py
src/app/ingestion/: file_stream.py  live_stream.py
src/app/llm/: prompts.py  scorer.py
src/app/notifications/: slack.py
src/app/stt/: groq_whisper.py
tests/: test_scorer.py  test_unit.py
